# FaceRecognition

IntelligentFaceMatch/: README.md  api.py  camera.py  config.json  config.py  database.py  database_setup.py  face_quality.py  face_recognition_service.py  fastapi_app.py  grpc_server.py  main.py  mjpeg_server.py  models.py  pyproject.toml  replit.nix  run_system.py  stream.py  system_manager.py
IntelligentFaceMatch/advanced_features/: __init__.py  active_learning.py  age_gender_estimator.py  emotion_detector.py  re_identification.py
IntelligentFaceMatch/attached_assets/: Pasted-import-cv2-import-dlib-import-numpy-as-np-import-os-import-pickle-from-datetime-import-datetime-impo-1744368202662.txt
IntelligentFaceMatch/docs/: admin_guide.md  api_documentation.md  configuration_guide.md  deployment_guide.md  developer_guide.md  installation_guide.md  user_guide.md
IntelligentFaceMatch/monitoring/: __init__.py  metrics.py
IntelligentFaceMatch/proto/: face_recognition.proto  face_recognition_pb2.py  face_recognition_pb2_grpc.py
IntelligentFaceMatch/realtime/: __init__.py  events.py  socketio_server.py
IntelligentFaceMatch/recognition/: detector.py  face_encoder.py
IntelligentFaceMatch/scaling/: __init__.py  load_balancer.py
IntelligentFaceMatch/scaling/sharding/: __init__.py  shard_manager.py  sharding_strategy.py
IntelligentFaceMatch/static/css/: custom.css  realtime.css
IntelligentFaceMatch/static/js/: dashboard.js  realtime.js  stream.js
IntelligentFaceMatch/templates/: base.html  dashboard.html  error.html  index.html  register.html
